# CY-Project-Template

./: .clang-format  CMakeLists.txt  README.md  main.cpp
include/: CommandParser.h  Generator.h  Option.h  Updator.h  config.h
include/protype/: Article.h  Beamer.h  Program.h  Project.h  Report.h
src/: CMakeLists.txt  Generator.cc
templates/article/: main.tex
templates/article/abstract/: abstract.tex
templates/article/preamble/: preamble.tex
templates/article/section/: sec.tex
templates/beamer/: WHU.sty
templates/beamer/preamble/: preamble.tex
templates/program/: CMakeLists.txt
templates/program/include/: CMakeLists.txt
templates/program/src/: CMakeLists.txt
templates/project/program/: CMakeLists.txt
templates/project/report/: main.tex
templates/project/report/title/: logo.tex
templates/report/bibliography/: bibliography.tex
templates/report/title/: thanks.tex  title.tex
